--- a/src/components/work/style.css
+++ b/src/components/work/style.css
@@ -3,12 +3,12 @@
     padding-top: 1%;
     padding-bottom: 1%;
   }
-  /* header box and border for the work section */
+ 
   #work {
     flex: 1;
     border-right: solid 0.25vw darkslategray;
   }
-  /* the container for all of our projects */
+ 
   #projects {
     flex: 5;
     display: flex;
@@ -16,15 +16,14 @@
     flex-direction: row;
     justify-content: center;
   }
-  /* did some more janky sizing in order to avoid reformatting the background images for the projects */
-  /* this is the default formatting for all of the projects, individual projects receive some styling below */
+
   .project {
     border: solid 5px lightblue;
     width: 37vw;
     height: 25vw;
     opacity: 0.75;
   }
-  /* assigns a background image for each of the individual projects */
+
   .proj-2 {
     background-image: url("../../images/disney.jpg");
     background-size: contain;
@@ -50,7 +49,7 @@
   .main-p {
     width: 74vw;
     height: 50vw;
-    background-image: url("../../images/pokedex5.png");
+    background-image: url("../../images/pokedex.jpg");
     background-size: contain;
   }
   /* formats and moves the text-box used on the projects */
